ajuste nav-profile

--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
                         <ul class="content">
                             <li class="content__heart"></li>
                             <li class="content__profile">
-                                <ul class="nav-menu">
-                                    <li class="nav-menu__item">Login</li>
-                                    <li class="nav-menu__item">Cadastre-se</li>
-                                    <li class="nav-menu__item">Minha Conta</li>
-                                    <li class="nav-menu__item">Favoritos</li>
-                                </ul>
+                                <div class="nav-menu">
+                                    <ul class="nav-menu__content">
+                                        <li class="nav-menu__item">Login</li>
+                                        <li class="nav-menu__item">Cadastre-se</li>
+                                        <li class="nav-menu__item">Minha Conta</li>
+                                        <li class="nav-menu__item">Favoritos</li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="content__card">
                                 <span class="content__card__qtd-desk">0</span>
