--- a/index.html
+++ b/index.html
@@ -1081,8 +1081,7 @@
         </div>
     </section>
 
-
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
