mudancas dos svgs do site

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="range" id="js-range-carrousel">
                 <div class="content">
                     <figure>
-                        <img src="/svgs/card.svg" alt="">
+                        <i class="card"></i>
                     </figure>
                     <span class="content__text">
                         <p>Toda a loja em</p>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="content">
                     <figure>
-                        <img src="/svgs/bau.svg" alt="">
+                        <i class="bau"></i>
                     </figure>
                     <span class="content__text">
                         <p>Produtos a</p> 
@@ -369,7 +369,7 @@
                 </div>
                 <div class="content">
                     <figure>
-                        <img class="arrow" src="/svgs/fi-rr-lock 1.svg" alt="">
+                        <i class="locked"></i>
                     </figure>
                     <span class="content__text">
                         <p>Compra</p>
@@ -378,7 +378,7 @@
                 </div>
                 <div class="content">
                     <figure>
-                        <img src="/svgs/frete.svg" alt="">
+                        <i class="frete"></i>
                     </figure>
                     <span class="content__text">
                         <b>Frete Grátis</b>
